--- a/All In One/confs/tomcat.conf
+++ b/All In One/confs/tomcat.conf
@@ -1,2 +1,2 @@
-UserParameter=jmx.tomcat.discovery,python $SCRIPPATH/tomcat.py --list
-UserParameter=jmx.tomcat.item[*],python $SCRIPPATH/tomcat.py -b "$1" -k "$2" -p $3
+UserParameter=jmx.tomcat.discovery,python $SCRIPPATH/tomcat.py --list 2>/dev/null
+UserParameter=jmx.tomcat.item[*],python $SCRIPPATH/tomcat.py -b "$1" -k "$2" -p $3 2>/dev/null
