--- a/All In One/confs/nginx.conf
+++ b/All In One/confs/nginx.conf
@@ -8,5 +8,5 @@
 #	}                                                  #
 #                                                          #
 ############################################################
-UserParameter=custom.nginx.discovery,python $SCRIPPATH/nginx.py --list
-UserParameter=custom.nginx.item[*],python $SCRIPPATH/nginx.py -p $1 -k $2
+UserParameter=custom.nginx.discovery,python $SCRIPPATH/nginx.py --list 2>/dev/null
+UserParameter=custom.nginx.item[*],python $SCRIPPATH/nginx.py -p $1 -k $2 2>/dev/null
