--- a/All In One/confs/mysql.conf
+++ b/All In One/confs/mysql.conf
@@ -1,11 +1,11 @@
 ## MySQL Status
-UserParameter=mysql.status[*],python $SCRIPPATH/mysql_status.py -k "$1"
+UserParameter=mysql.status[*],python $SCRIPPATH/mysql_status.py -k "$1" 2>/dev/null
 
 ## MySQL Perf
-UserParameter=mysql.perf[*],python $SCRIPPATH/mysql_perf.py -k "$1"
+UserParameter=mysql.perf[*],python $SCRIPPATH/mysql_perf.py -k "$1" 2>/dev/null
 
 ## MySQL Slave, Just to Differentiate by Key_name
-UserParameter=mysql.slave[*],python $SCRIPPATH/mysql_all.py -k "$1"
+UserParameter=mysql.slave[*],python $SCRIPPATH/mysql_all.py -k "$1" 2>/dev/null
 
 ## MySQL All, Can Replace mysql_status.py
-UserParameter=mysql.item[*],python $SCRIPPATH/mysql_all.py -k "$1"
+UserParameter=mysql.item[*],python $SCRIPPATH/mysql_all.py -k "$1" 2>/dev/null
