--- a/All In One/confs/memcache.conf
+++ b/All In One/confs/memcache.conf
@@ -1,2 +1,2 @@
-UserParameter=memcached.discovery,python $SCRIPPATH/memcache.py --list
-UserParameter=memcached.status[*],python $SCRIPPATH/memcache.py -i "$1" -p $2
+UserParameter=memcached.discovery,python $SCRIPPATH/memcache.py --list 2>/dev/null
+UserParameter=memcached.status[*],python $SCRIPPATH/memcache.py -i "$1" -p $2 2>/dev/null
