--- a/All In One/confs/redis.conf
+++ b/All In One/confs/redis.conf
@@ -1,3 +1,3 @@
 ## qjq redis-stat for discovery @20151123
-UserParameter=custom.redis.discovery,python $SCRIPPATH/redis.py --list
-UserParameter=custom.redis.item[*],python $SCRIPPATH/redis.py -p $1 -k "$2"
+UserParameter=custom.redis.discovery,python $SCRIPPATH/redis.py --list 2>/dev/null 
+UserParameter=custom.redis.item[*],python $SCRIPPATH/redis.py -p $1 -k "$2" 2>/dev/null
